fix UI for light and dark mode.

--- a/public/css/style-dark.css
+++ b/public/css/style-dark.css
@@ -32,7 +32,7 @@ body {
   position: absolute;
   top: 10px;
   left: 10px;
-  z-index: 5; /* Make sure it stays above background elements */
+  z-index: 5;
 }
 
 #theme-button {
@@ -89,6 +89,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  align-content: center;
   flex-direction: column;
 }
 
@@ -96,6 +97,7 @@ button {
   display: none;
   justify-content: center;
   align-items: center;
+  align-content: center;
   flex-direction: column;
   color: white;
 }
@@ -124,6 +126,7 @@ button {
 }
 
 #game-grid {
+  padding-top: 20px;
   width: 90vw;
   height: 40vh;
   margin: auto;
